projeto finalizado - projects routes atualizadas, teamMemberSchema criado, todos schemas atualizados, swagger feito e outras melhorias
